Add export_failed/succeded, pass reset, order confirmation

--- a/src/set_password.mjml
+++ b/src/set_password.mjml
@@ -13,14 +13,11 @@
 
           <mj-text mj-class="h1">Hello there!</mj-text>
 
-          <mj-text>We received your dashboard password reset request.</mj-text>
-          <mj-text>To reset your password, simply click the “Reset my password” button below.</mj-text>
+          <mj-text>You received this e-mail because you have to set password for your dashboard user account.</mj-text>
+          <mj-text>To set up your password, simply click the “Set my password” button below.</mj-text>
 
-          <mj-button mj-class="buttonStyle" href="{{reset_url}}">Reset my password →</mj-button>
+          <mj-button mj-class="buttonStyle" href="{{password_set_url}}">Set my password →</mj-button>
 
-          <mj-text>This link expires in 24 hours. If you miss the window, please reset your password again.</mj-text>
-
-          <mj-text>Didn&apos;t request a reset? Ignore this message (or reply to let us know).</mj-text>
           <mj-text>Thank you!</mj-text>
         </mj-column>
       </mj-section>
