--- a/src/password-reset.mjml
+++ b/src/password-reset.mjml
@@ -16,7 +16,7 @@
           <mj-text>We received your dashboard password reset request.</mj-text>
           <mj-text>To reset your password, simply click the “Reset my password” button below.</mj-text>
 
-          <mj-button mj-class="buttonStyle" href="{{reset_url}}">Reset my password →</mj-button>
+          <mj-button mj-class="buttonStyle" href="{{reset_url}}">Reset my password</mj-button>
 
           <mj-text>This link expires in 24 hours. If you miss the window, please reset your password again.</mj-text>
 
