--- a/src/set_password.mjml
+++ b/src/set_password.mjml
@@ -16,7 +16,7 @@
           <mj-text>You received this e-mail because you have to set password for your dashboard user account.</mj-text>
           <mj-text>To set up your password, simply click the “Set my password” button below.</mj-text>
 
-          <mj-button mj-class="buttonStyle" href="{{password_set_url}}">Set my password →</mj-button>
+          <mj-button mj-class="buttonStyle" href="{{password_set_url}}">Set my password</mj-button>
 
           <mj-text>Thank you!</mj-text>
         </mj-column>
