Move build, src and resources dirs to templated_email dir

--- a/templated_email/source/export_failed.mjml
+++ b/templated_email/source/export_failed.mjml
@@ -13,11 +13,9 @@
 
           <mj-text mj-class="h1">Hello,</mj-text>
 
-          <mj-text>We're happy to let you know that your file with {{data_type}} data is ready to download.</mj-text>
-          <mj-text>To download your {{data_type}} data, simply click the button below.</mj-text>
-          <mj-button mj-class="buttonStyle" href="{{csv_link}}">Download data</mj-button>
+          <mj-text>Sorry, we couldn't finish exporting {{data_type}} due to unexpected errors. Please try again.</mj-text>
 
-          <mj-text>Have a great day and thank you!</mj-text>
+          <mj-text>Our appolgies and thank you.</mj-text>
         </mj-column>
       </mj-section>
       <mj-include path="./components/footer.mjml" />
