Update saleor logo url

--- a/templated_email/source/components/header.mjml
+++ b/templated_email/source/components/header.mjml
@@ -1,2 +1,2 @@
-<mj-image mj-class="topLogoStyle" src="../resources/logo.png"></mj-image>
+<mj-image mj-class="topLogoStyle" src="{{ logo_url }}"></mj-image>
 <mj-divider mj-class="borderAccentColor"></mj-divider>
