--- a/templated_email/source/components/footer.mjml
+++ b/templated_email/source/components/footer.mjml
@@ -1,5 +1,5 @@
 <mj-section>
   <mj-column>
-    <mj-text mj-class="footerTextStyle">This is an automatically generated e-mail, please do not reply. <br />Certain messages, like this one, are essectial to service operations.</mj-text>
+    <mj-text mj-class="footerTextStyle">This is an automatically generated e-mail, please do not reply. <br />Certain messages, like this one, are essential to service operations.</mj-text>
   </mj-column>
 </mj-section>
